env to list + tmp list for equals, echo working, WIP=unset, export

--- a/todo.txt
+++ b/todo.txt
@@ -8,7 +8,7 @@ X	• Have a working history.
 X	• Not use more than one global variable. Think about it. You will have to explain
 		its purpose.
 
-	• Not interpret unclosed quotes or special characters which are not required by the
+X	• Not interpret unclosed quotes or special characters which are not required by the
 		subject such as \ (backslash) or ; (semicolon).
 
 	• Handle ’ (single quote) which should prevent the shell from interpreting the metacharacters in the quoted sequence.
