--- a/todo.txt
+++ b/todo.txt
@@ -72,6 +72,7 @@ X		◦ exit with no options
 
 	- change is_assignment function to check several variables instead of only the first one
 
+	- use the env list instead of the original env
 ///////////////////////////////////////////
 
 
