--- a/todo.txt
+++ b/todo.txt
@@ -127,7 +127,7 @@ EVALUATION TESTS:
 		If something crashes, select the "crash" flag.
 		If something doesn't work, select the "incomplete work" flag.
 
-❌Signals
+✅Signals
 		✅ctrl-C in an empty prompt should display a new line with a new prompt.
 		✅ctrl-\ in an empty prompt should not do anything.
 		✅ctrI-D in an empty prompt should quit minishell --> RELAUNCH!
@@ -136,7 +136,7 @@ EVALUATION TESTS:
 		✅ctrl-D in a prompt after you wrote some stuff should not do anything.
 		✅ctrl-\ in a prompt after you wrote some stuff should not do anything.
 		✅Try ctrl-C after running a blocking command like cat without arguments or grep "something'
-		❌Try ctrl-\ after running a blocking command like cat without arguments or grep "something".
+		✅Try ctrl-\ after running a blocking command like cat without arguments or grep "something".
 		✅Try ctrl-D after running a blocking command like cat without arguments or grep "something'
 		Repeat multiple times using different commands.
 		If something crashes, select the "crash" flag.
