Refactoring: extracted redirections and file descriptor specific functions to files of their own, fixed a heap-use-after-free and a small leak related to the new prompt.

--- a/todo.txt
+++ b/todo.txt
@@ -66,6 +66,10 @@ X		◦ exit with no options
 
 	- check for forbidden functions
 
+	- implement ft_readline
+
+	- handle missing files in redirections (might be because of close of -1)
+
 ///////////////////////////////////////////
 
 
