--- a/todo.txt
+++ b/todo.txt
@@ -15,14 +15,14 @@ X	• Handle ’ (single quote) which should prevent the shell from interpreting
 
 X	• Handle " (double quote) which should prevent the shell from interpreting the metacharacters in the quoted sequence except for $ (dollar sign).
 
-	• Implement redirections:
+X	• Implement redirections:
 		◦ < should redirect input.
 		◦ > should redirect output.
 		◦ << should be given a delimiter, then read the input until a line containing the
 			delimiter is seen. However, it doesn’t have to update the history!
 		◦ >> should redirect output in append mode.
 
-	• Implement pipes (| character). The output of each command in the pipeline is
+X	• Implement pipes (| character). The output of each command in the pipeline is
 		connected to the input of the next command via a pipe.
 
 X	• Handle environment variables ($ followed by a sequence of characters) which
@@ -71,7 +71,7 @@ EVALUATION TESTS:
 
 ❌Norminette
 
-❌Leaks
+✅Leaks
 
 ✅Compile
 		Use "make -n" to see if compilation use "-Wall -Wextra -Werror". If not, select the "invalid compilation" flag.
