--- a/todo.txt
+++ b/todo.txt
@@ -55,9 +55,15 @@ X		◦ exit with no options
 
 	- expansion occuring in heredoc
 
-	- env | grep PWD (pwd not changing in env after cd)
-
 	- "echo" (first arg, even between quotes must be executed)
+
+	// irdoc ctrlc
+	// heredoc expand variables lol
+	// unended quotes
+	// handle absolute and relative commands
+	// echo 'a>'b tem de dar 'a>b' (random espacos)
+	// exit neg numbrs
+
 ///////////////////////////////////////////
 
 
