--- a/todo.txt
+++ b/todo.txt
@@ -51,18 +51,14 @@ X		◦ exit with no options
 
 ///////////////////////////////////////////
 
-	- segfault when exporting a variable that starts with quotes.
-
-	- expansion occuring in heredoc
-
 	- "echo" (first arg, even between quotes must be executed)
 
 	// irdoc ctrlc
 	// heredoc expand variables lol
-	// unended quotes
+	// unended quotes in export
 	// handle absolute and relative commands
 	// echo 'a>'b tem de dar 'a>b' (random espacos)
-	// exit neg numbrs
+	// exit neg numbrs -> strcmp not working because of '-'
 
 ///////////////////////////////////////////
 
