--- a/todo.txt
+++ b/todo.txt
@@ -55,14 +55,14 @@ X		◦ exit with no options
 
 	- expansion occuring in heredoc
 
-	- "echo" (first arg, even between quotes must be executed)
-
 	// irdoc ctrlc
 	// heredoc expand variables lol
 	// unended quotes
-	// handle absolute and relative commands
-	// echo 'a>'b tem de dar 'a>b' (random espacos)
 	// exit neg numbrs
+
+	// echo 'a>'b tem de dar 'a>b' (random espacos)
+	✅ handle absolute and relative commands
+	✅ - "echo" (first arg, even between quotes must be executed)
 
 ///////////////////////////////////////////
 
