--- a/todo.txt
+++ b/todo.txt
@@ -51,9 +51,10 @@ X		◦ exit with no options
 
 ///////////////////////////////////////////
 	// irdoc ctrlc
-	// heredoc expand variables lol
+	// Absolute paths not working
 
-	✅unended quotes
+	✅ heredoc expand variables lol
+	✅ unended quotes
 	✅ exit neg numbrs
 	✅ echo 'a>'b tem de dar 'a>b' (random espacos)
 	✅ handle absolute and relative commands
