--- a/todo.txt
+++ b/todo.txt
@@ -50,17 +50,14 @@ X		◦ exit with no options
 
 
 ///////////////////////////////////////////
-	// irdoc ctrlc
-	// Absolute paths not working
 
+	// irdoc ctrlc
 	✅ heredoc expand variables lol
 	✅ unended quotes
 	✅ exit neg numbrs
 	✅ echo 'a>'b tem de dar 'a>b' (random espacos)
 	✅ handle absolute and relative commands
-	✅ - "echo" (first arg, even between quotes must be executed)
-
-///////////////////////////////////////////
+	✅ - "echo"        /////////////////////////////
 
 
 EVALUATION TESTS:
