--- a/todo.txt
+++ b/todo.txt
@@ -52,12 +52,16 @@ X		◦ exit with no options
 ///////////////////////////////////////////
 
 	// irdoc ctrlc
+	echo '<'>teste is not redirecting
+
 	✅ heredoc expand variables lol
 	✅ unended quotes
 	✅ exit neg numbrs
 	✅ echo 'a>'b tem de dar 'a>b' (random espacos)
 	✅ handle absolute and relative commands
-	✅ - "echo"        /////////////////////////////
+	✅ - "echo"
+
+/////////////////////////////
 
 
 EVALUATION TESTS:
