--- a/todo.txt
+++ b/todo.txt
@@ -16,11 +16,11 @@ X	• Handle ’ (single quote) which should prevent the shell from interpreting
 X	• Handle " (double quote) which should prevent the shell from interpreting the metacharacters in the quoted sequence except for $ (dollar sign).
 
 X	• Implement redirections:
-		◦ < should redirect input.
-		◦ > should redirect output.
-		◦ << should be given a delimiter, then read the input until a line containing the
-			delimiter is seen. However, it doesn’t have to update the history!
-		◦ >> should redirect output in append mode.
+x		◦ < should redirect input.
+x		◦ > should redirect output.
+x		◦ << should be given a delimiter, then read the input until a line containing the
+x			delimiter is seen. However, it doesn’t have to update the history!
+x		◦ >> should redirect output in append mode.
 
 X	• Implement pipes (| character). The output of each command in the pipeline is
 		connected to the input of the next command via a pipe.
@@ -51,15 +51,16 @@ X		◦ exit with no options
 
 ///////////////////////////////////////////
 
-	// irdoc ctrlc
-	echo '<'>teste is not redirecting
-
+	✅ irdoc ctrlc
+	✅ echo '<'>teste is not redirecting
 	✅ heredoc expand variables lol
 	✅ unended quotes
 	✅ exit neg numbrs
 	✅ echo 'a>'b tem de dar 'a>b' (random espacos)
 	✅ handle absolute and relative commands
 	✅ - "echo"
+	E=2, echo $E : should print the value of E, even when its not on env
+	cat | cat | ls : should quit cat after two enters
 
 /////////////////////////////
 
@@ -172,7 +173,7 @@ EVALUATION TESTS:
 ✅Environment path
 		Execute commands but this time without any path (Is, wc, awk and so forth).
 		Unset the $PATH and ensure commands are not working anymore.
-?		Set the $PATH to a multiple directory value (directory 1 :directory 2) and ensure that directories are checked in
+		Set the $PATH to a multiple directory value (directory 1 :directory 2) and ensure that directories are checked in
 	order from left to right.
 
 ✅Redirection
